# aibot

./: .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  env.example  fixtures.py  pyproject.toml  test_pipeline.py
ai_bot/: config.py  main.py  utils.py
ai_bot/ai/: generator.py  openai_client.py
ai_bot/api/: endpoints.py  schemas.py
ai_bot/celery/: celery_worker.py  tasks.py
ai_bot/db/: db_manager.py  models.py  models_utils.py
ai_bot/news_parser/: base.py  habr_parser.py  sites.py  telegram.py  tproger_parser.py
ai_bot/telegram/: admin_bot.py  auth.py  bot.py  publisher.py
ai_bot/telegram/telegram_sessions/: create_session_docker.py  create_session_simple.py
